Fix scrollbars

--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   height: 100vh;
   justify-content: space-between;
+  max-width: 100%;
   padding: 1rem;
   position: relative;
   width: 100vw;
